--- a/methodbox/public/stylesheets/widget_tab_nav.css
+++ b/methodbox/public/stylesheets/widget_tab_nav.css
@@ -5,7 +5,9 @@
 	margin: 13px 0px 0px 0px;
 	padding: 0px;
 	z-index: 1;
-	padding-left: 10px; 
+	padding-left: 10px;
+/* IE needs this or it might centre the tabs */ 
+	text-align: left;
 	}
 
 .main_tabnav ul {
